[refs #74886] Fix menu spacing.

--- a/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
+++ b/land/copernicus/theme/skins/copernicus_theme_styles/redesign-app.css
@@ -6426,7 +6426,7 @@ body {
         #header-section .container-fluid#land-brand-utils .content .utils .list-inline.land-list-separated li:last-child {
           margin-right: -6px; }
         #header-section .container-fluid#land-brand-utils .content .utils .list-inline.land-list-separated li {
-          padding-right: 0px; }
+          padding-right: 6px; }
       #header-section .container-fluid#land-brand-utils .content .utils .col-lg-8.col-md-8.col-sm-12 {
         padding: 0; }
       #header-section .container-fluid#land-brand-utils .content .utils .btn.btn-default, #header-section .container-fluid#land-brand-utils .content .utils input {
